# mbreakout

./: .gitignore  CLAUDE.md  Cargo.toml  MerinoBreakout.icns  README  codes.txt  create_dmg.sh
src/: animation.rs  balls_and_bullets.rs  barrels.rs  collisions.rs  consts.rs  countdown_and_portal.rs  game.rs  main.rs  meanies.rs  menu.rs  paddle.rs  save.rs  shop.rs  splash.rs  transition.rs
